feat : convert staff entity to document